# taskery

./: .gitignore  Cargo.toml  README.MD  docker-compose.yaml
auth-service/: Cargo.toml
auth_service/: Cargo.toml  Dockerfile  build.rs  readme.md
auth_service/proto/: auth.proto
auth_service/src/: lib.rs  main.rs
auth_service/src/client/: mod.rs
auth_service/src/proto/: auth.rs  auth_impl.rs  mod.rs
auth_service/src/server/: mod.rs
auth_service/src/session_manager/: mod.rs  redis.rs
auth_service/tests/: integration_bad_test.rs
data-service/: Cargo.toml
data-service/src/: main.rs
data-service/src/graphql/: schema.rs
data-service/tests/: schema.rs
data_service/: Cargo.toml
data_service/migrations/2021-04-28-132428_base_models/: down.sql
data_service/migrations/2021-05-03-184859_user_is_admin/: up.sql
data_service/migrations/2021-05-14-210040_task_performer_null/: up.sql
data_service/migrations/2021-05-15-003351_page_text/: down.sql
data_service/migrations/2021-05-17-175842_relations/: down.sql
data_service/src/: lib.rs  main.rs
data_service/src/data_loader/: companies.rs  macros.rs  mod.rs  users.rs
data_service/src/database/: mod.rs
data_service/src/database/postgres/: mod.rs
data_service/src/graphql/: mod.rs  models.rs  mutation_root.rs  schema.rs
data_service/src/models/: auth.rs  auth_token.rs  company.rs  diesel_schema.rs  experience.rs  mod.rs  settings.rs  user.rs
data_service/src/models/project/: mod.rs  pages.rs
data_service/src/models/project/board/: column.rs  mod.rs
data_service/src/models/project/board/task/: comment.rs  history.rs  mod.rs
data_service/tests/: schema.rs
database/: Cargo.toml
database/src/: lib.rs
database/src/postgres/: mod.rs
graphql_server/: Cargo.toml  Dockerfile  README.MD  diesel.toml
graphql_server/migrations/2021-05-03-184859_user_is_admin/: down.sql  up.sql
graphql_server/src/: lib.rs  main.rs
graphql_server/src/database/: mod.rs
graphql_server/tests/: schema.rs
models/: Cargo.toml
models/migrations/2021-04-25-131436_create_users/: up.sql
models/migrations/2021-04-28-132428_base_models/: up.sql
models/src/: auth_token.rs  company.rs  experience.rs  lib.rs  user.rs
models/src/project/: mod.rs  pages.rs
models/src/project/board/: column.rs  mod.rs
models/src/project/board/task/: comment.rs  history.rs  mod.rs
mongodb/: Cargo.toml
postgres/: Cargo.toml
protos/: auth.proto
rest_server/: Cargo.toml  README.MD  build.rs
server/: Cargo.toml  build.rs
(+21 files in other folders)
