[package]
name = "auth_service"
version = "0.1.0"
authors = ["Danil Anokhin <malefaro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4"
prost = "0.7"
redis = {version="0.20.0", features=["tokio-comp"]}
async-trait = "0.1.50"
tokio = { version = "1.5.0", features = ["full"] }
dotenv = "0.15.0"
rand = "0.8.3"

[build-dependencies]
tonic-build = "0.4"