[package]
name = "data-service"
version = "0.1.0"
authors = ["malefaro <malefaro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.4"
diesel = { version = "1.4.6", features = ["postgres"] }
models = {path = "../models"}
