[package]
name = "database"
version = "0.1.0"
authors = ["Danil Anokhin <malefaro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = {path="../models"}
async-trait = "0.1.50"
diesel = { version = "1.4.6", features = ["postgres", "r2d2", "chrono"] }
actix-web = "3.3.2"
