[package]
name = "models"
version = "0.1.0"
authors = ["Danil Anokhin <malefaro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.4"
graphql_client = "0.9.0"
serde = "1.0.125"
diesel = { version = "1.4.6", features = ["postgres"] }